--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,17 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+div {
+  padding: 20px;
+}
+
+form {
+  border-style: solid;
+  padding: 20px;
+}
+
+input {
+  display: block;
+  margin-bottom: 20px;
+}
